# social-network

./: .pre-commit-config.yaml  README.md  openapi.yml  pyproject.toml  schema.yml
automated_bot/: bot.py  config.json
social_network/: settings.py  urls.py
social_network/auth/: apps.py  custom_middleware.py  models.py  serializers.py  urls.py  views.py
social_network/auth/migrations/: 0001_initial.py
social_network/auth/tests/: test_views.py
social_network/core/: apps.py  models.py  serializers.py  urls.py  views.py
social_network/core/migrations/: 0001_initial.py  0002_post_author.py  0003_alter_postlike_post_id_and_more.py  0004_postlike_created_at.py  0005_alter_post_modified_at.py
social_network/core/tests/: test_views.py
