[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["Anastasiia Derevianko <anastasiia1010@gmail.com>"]
readme = "README.md"
packages = [{include = "social_network"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
