[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["Anastasiia Derevianko <anastasiia1010@gmail.com>"]
readme = "README.md"
packages = [{include = "social_network"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.0"
black = "^23.12.1"
isort = "^5.13.2"
faker = "^22.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]